--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 '*.gri' filter=lfs diff=lfs merge=lfs -text
 *.gri filter=lfs diff=lfs merge=lfs -text
+*.dbf filter=lfs diff=lfs merge=lfs -text
+*.shp filter=lfs diff=lfs merge=lfs -text
+*.sbn filter=lfs diff=lfs merge=lfs -text
+Ecospace-habiat-maps/Data-inputs/* filter=lfs diff=lfs merge=lfs -text
