--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.shp filter=lfs diff=lfs merge=lfs -text
 *.sbn filter=lfs diff=lfs merge=lfs -text
 Ecospace-habiat-maps/Data-inputs/* filter=lfs diff=lfs merge=lfs -text
+*.nc filter=lfs diff=lfs merge=lfs -text
